<resources>
    <string name="app_name">CleanGallery</string>
    <string name="permission_access_storage_never_ask_again">Accessing storage permissions were denied with never ask again.</string>
    <string name="permission_access_storage_denied">Accessing storage permissions were denied. Please consider granting it in order to access the storage!</string>
    <string name="permission_access_storage_rationale">Accessing storage permissions are needed to demonstrate access to the local storage</string>

    <string name="menu_setting_title">Setting</string>
    <string name="menu_sort_option">Sort</string>
    <string name="menu_filter_option">Filter</string>
    <string name="menu_view_mode">View mode</string>
    <string name="menu_category_mode">Category mode</string>

    <string name="menu_info">Info</string>
    <string name="menu_share">Share</string>


    <string name="sort_option_descending">Descending</string>
    <string name="sort_option_ascending">Ascending</string>

    <string name="sort_option_path">File Path</string>
    <string name="sort_option_size">Size</string>
    <string name="sort_option_date_taken">Date taken</string>
    <string name="sort_option_last_modified">Last modified</string>
    <string name="sort_option_filename">File name</string>

    <string name="sort_option_directory_path">Directory Path</string>
    <string name="sort_option_directory_name">Directory name</string>
    <string name="sort_option_count">Count</string>

    <string name="sort_option_daily">Daily</string>
    <string name="sort_option_monthly">Monthly</string>
    <string name="sort_option_yearly">Yearly</string>

    <string name="filter_images">Images</string>
    <string name="filter_videos">Videos</string>
    <string name="filter_gifs">Gifs</string>

    <string name="dialog_sort_title">Sort by</string>
    <string name="dialog_filter_title">Filter</string>

    <string name="format_group_daily">yyyy-MM-dd</string>
    <string name="format_group_monthly">yyyy-MM</string>
    <string name="format_group_yearly">yyyy</string>

    <string name="transition_imageview">imageview transition</string>
</resources>
