<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_view_mode"
        android:title="@string/menu_view_mode"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_category_mode"
        android:title="@string/menu_category_mode"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/menu_sort_option"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/menu_filter_option"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_setting_title"
        app:showAsAction="never"></item>
</menu>