<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sorting_dialog_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/sorting_dialog_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/sorting_dialog_radio_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sorting_dialog_radio_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_filename" />

            <RadioButton
                android:id="@+id/sorting_dialog_radio_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_path" />

            <RadioButton
                android:id="@+id/sorting_dialog_radio_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_size" />

            <RadioButton
                android:id="@+id/sorting_dialog_radio_last_modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_last_modified" />

            <RadioButton
                android:id="@+id/sorting_dialog_radio_date_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_date_taken" />

        </RadioGroup>

        <include layout="@layout/divider" />

        <RadioGroup
            android:id="@+id/sorting_dialog_radio_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/sorting_dialog_radio_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_ascending" />

            <RadioButton
                android:id="@+id/sorting_dialog_radio_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_option_descending" />
        </RadioGroup>

        <include
            android:id="@+id/use_for_this_folder_divider"
            layout="@layout/divider" />

        <!--<RadioButton-->
        <!--android:id="@+id/sorting_dialog_use_for_this_folder"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/use_for_this_folder" />-->
    </LinearLayout>
</ScrollView>
